--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 before_install:
   - gem install bundler
 rvm:
-  - 2.1.7
-  - 2.2.3
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0-preview2
   - rbx-2
-  - jruby-9.0.1.0
+  - jruby-9.0.4.0
